# agentic-arch-review

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
arch_review_agent/: config.py
arch_review_agent/parsing/: __init__.py
arch_review_agent/policies/: __init__.py  output_policy.py
arch_review_agent/tools/: base.py
samples/: sample_architecture.md
src/arch_review_agent/: __init__.py  main.py
src/arch_review_agent/failure_analysis/: __init__.py  analyzer.py
src/arch_review_agent/llm/: __init__.py  client.py
src/arch_review_agent/orchestration/: __init__.py  orchestrator.py  pipeline.py
src/arch_review_agent/parsing/: markdown_parser.py
src/arch_review_agent/policies/: input_policy.py
src/arch_review_agent/tools/: __init__.py  registry.py
